--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -35,7 +35,7 @@ timeline:
 ---
 
 ## Summary
-This initiative focuses on identifying and addressing vulnerabilities in the publicly accessible assets of NGOs. This is a collaboration with CyberPeace Institute, The Hague Humanity Hub (HHH) and CSIRT.global
+This initiative focuses on identifying and addressing vulnerabilities in the publicly accessible assets of NGOs. This is a collaboration with [CyberPeace Institute](https://cyberpeaceinstitute.org/), [The Hague Humanity Hub (HHH)](https://www.humanityhub.net/) and [CSIRT.global](https://csirt.global)
 
 ## Recommendations
 After receiving a notification, it is very important that the vulnerability outlined in the correspondence is promptly addressed and remediated. The notification will provide detailed information, including the specific location and a comprehensive description of the identified vulnerability.
