--- a/_cases/2025/DIVD-2025-00005.md
+++ b/_cases/2025/DIVD-2025-00005.md
@@ -62,7 +62,7 @@ If you operate an ATG system, we recommend the following security measures:
 
 DIVD is conducting internet-wide scans to identify exposed ATG systems. Our scanning methodology uses carefully crafted commands (such as I90200, 980, and A81) that can identify the make and model of ATG systems without disrupting their operation. These commands allow us to verify device types, firmware versions, and configuration details while ensuring we don't interfere with normal operations.
 
-When scanning, we're careful to identify specific model information and send a notification message informing operators that their systems were discovered as part of DIVD research (DIVD Case 2025-00005).
+When scanning, we're careful to identify specific model information and send a notification message informing operators that their systems were discovered as part of DIVD research (DIVD Case DIVD-2025-00005).
 
 Our research has identified approximately 5,000-8,000 ATG systems directly exposed to the internet globally. We are working to contact the operators of these systems to advise on proper security controls and explain potential risk scenarios that could result from unauthorized access.
 
