--- a/_cases/2025/DIVD-2025-00005.md
+++ b/_cases/2025/DIVD-2025-00005.md
@@ -43,7 +43,7 @@ Automated Tank Gauge (ATG) systems are widely used in gas stations and other cri
 
 The vulnerability affects ATG systems from various manufacturers, most notably Veeder-Root models including TLS-250 and TLS-350. These devices, when connected directly to the internet, can be accessed by sending specific commands through their serial interfaces (typically on port 10001), potentially allowing attackers to view fuel levels, change tank labels and alarm thresholds, or even modify critical monitoring parameters.
 
-We've observed real-world incidents of attackers changing tank information, performing reconnaissance, and even launching DoS attacks against these systems. Previous security research has shown that manipulation of these systems could potentially lead to serious safety incidents, as demonstrated by a 2009 explosion in Puerto Rico that was linked to a malfunctioning computerized monitoring system.
+We've observed real-world incidents of attackers changing tank information, performing reconnaissance, and even launching DoS attacks against these systems. Previous security research has shown that manipulation of these systems could potentially lead to serious safety incidents, as demonstrated by a [2009 explosion in Puerto Rico](https://edition.cnn.com/2009/US/11/17/puerto.rico.fire.investigation/index.html)  that was linked to a malfunctioning computerized monitoring system.
 
 Beyond typical gas stations, such systems are also deployed in military bases, hospitals, airports, emergency services, and power plants, making this exposure a concern for critical infrastructure security.
 
