Fixed use of <tt> elements and added full disclsure to the timeline

--- a/_cases/2021/DIVD-2021-00020.md
+++ b/_cases/2021/DIVD-2021-00020.md
@@ -64,6 +64,8 @@ timeline:
   event: Given the lack of reaction DIVD decides to publish this case file en discloses limited vulnerability details.
 - start: 2023-10-16
   event: Case closed
+- start: 2025-05-07
+  event: Full disclosure
 ---
 
 ## Summary
