--- a/_cases/2025/DIVD-2025-00007.md
+++ b/_cases/2025/DIVD-2025-00007.md
@@ -17,8 +17,9 @@ versions:
 recommendation: "Update CrushFTP as soon as possible to version 10.8.4+ or v11.3.1+"
 workaround: "If you are unable to update, then enable the DMZ (demilitarized zone) perimeter network option to protect the CrushFTP instance until security updates can be deployed."
 patch_status: "Fully patched"
-status: Open
+status: Closed
 start: 2025-03-29
+end: 2025-05-08
 timeline:
 - start: 2025-03-29
   end:
@@ -32,7 +33,14 @@ timeline:
 - start: 2025-04-01
   end:
   event: "DIVD starts notifying network owners with a vulnerable devices in their network."
+- start: 2025-05-08
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
+- start: 2025-05-08
+  end:
+  event: "Case closed"
 ---
+ips: 537
 
 ## Summary
 CrushFTP is a file transfer server used for file sharing, workflow automation, and user management. It supports multiple protocols like FTP, SFTP, HTTP/S, WebDAV. {% cve CVE-2025-2825 %} has been identified in CrushFTP versions 10.0.0 through 10.8.3 and 11.0.0 through 11.3.0. This vulnerability has a high impact on all three aspects of the CIA triad (confidentiality, integrity, and availability). Exploiting {% cve CVE-2025-2825 %} can allow threat actors without any authentication to access the application remotely.
