made some minor changes

--- a/_cases/2025/DIVD-2025-00017.md
+++ b/_cases/2025/DIVD-2025-00017.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "Authentication bypass and Remote Code Execution in Ivanti EPMM"
+title: "Authentication Bypass and Remote Code Execution in Ivanti EPMM"
 author: Maarten van Norden
 lead: Stan Plasmeijer
 excerpt: "Authentication bypass in Ivanti EPMM chained together with a remote code execution vulnerability, could lead to unauthenticated remote code execution."
@@ -36,12 +36,12 @@ timeline:
 ---
 
 ## Summary
-Ivanti has resolved a authentication bypass (CVE-2025-4427) in EPMM, where only the on-prem instances are vulnerable. Abuse of the authentication bypass can be chained with a remote code execution vulnerability (CVE-2025-4428). Exploitation of these vulnerabilities have been observed in the wild. The following Ivanti EPMM versions are vulnerable: 11.12.0.4, 12.3.0.1, 12.4.0.1, 12.5.0.0 and prior versions.
+Ivanti has resolved an authentication bypass (CVE-2025-4427) in EPMM, where only the on-premises instances are vulnerable. Abuse of the authentication bypass can be chained with a remote code execution vulnerability (CVE-2025-4428). Exploitation of these vulnerabilities has been observed in the wild. The following Ivanti EPMM versions are vulnerable: 11.12.0.4, 12.3.0.1, 12.4.0.1, 12.5.0.0 and prior versions.
 
 Installing the following Ivanti EPMM versions will resolve the specified vulnerabilities: 11.12.0.5, 12.3.0.2, 12.4.0.2 or 12.5.0.1
 
 ## Recommendations
-Installing the following Ivanti EPMM versions will resolve the specified vulnerabilities: 11.12.0.5, 12.3.0.2, 12.4.0.2 or 12.5.0.1. If the implementation of these specified versions is not feasable, then there is a workaround available. In this situation users can mitigate the threat by filtering access to the API using either the built in Portal ACLs functionality of Ivanti EPMM or an external WAF. More information on the implementation of the workaround can be found at the Ivanti [help portal](https://help.ivanti.com/mi/help/en_us/core/12.x/sys/CoreSystemManager/Access_Control_Lists__Po.htm)
+Installing the following Ivanti EPMM versions will resolve the specified vulnerabilities: 11.12.0.5, 12.3.0.2, 12.4.0.2 or 12.5.0.1. If the implementation of these specified versions is not feasible, then there is a workaround available. In this situation users can mitigate the threat by filtering access to the API using either the built in Portal ACLs functionality of Ivanti EPMM or an external WAF. More information on the implementation of the workaround can be found at the Ivanti [help portal](https://help.ivanti.com/mi/help/en_us/core/12.x/sys/CoreSystemManager/Access_Control_Lists__Po.htm)
 
 ## What we are doing
 DIVD is currently working to identify parties that are running a vulnerable version of Ivanti EPMM and to notify these parties. 
