ivanti epmm - case 17 - timeline update

--- a/_cases/2025/DIVD-2025-00017.md
+++ b/_cases/2025/DIVD-2025-00017.md
@@ -33,6 +33,9 @@ timeline:
 - start: 2025-05-14
   end:
   event: "Case opened and starting first scan."
+- start: 2025-05-14
+  end:
+  event: "Notifications have been send out to vulnerable network owners."
 ---
 
 ## Summary
