--- a/_cases/2025/DIVD-2025-00016.md
+++ b/_cases/2025/DIVD-2025-00016.md
@@ -1,13 +1,13 @@
 ---
 layout: case
 title: "Unauthenticated Remote Code Execution in Ingress NGINX"
-author: 
-lead: ******
+author: Davy Aarts
+lead: 
 excerpt: "Unauthenticated Remote Code Execution in Ingress NGINX can result in cluster takeover"
 researchers:
-- ***
-- ***
-- ***
+- Victor Pasman
+- Davy Aarts
+- 
 cves:
 - CVE-2025-1974
 product:
