--- a/_cases/2025/DIVD-2025-00016.md
+++ b/_cases/2025/DIVD-2025-00016.md
@@ -43,7 +43,7 @@ The patched versions are 1.12.1 or 1.11.5
 ## Recommendations
 Upgrading the Ingress-Nginx Controller to the following version will resolved the vulnerability: 1.12.1 or 1.11.5.
 If the implementation of these specified versions is not feasible you can reduse the risk by turning off the Validating Admission Controller feature.
-More information on the implementation of the workaround can be found at the kubernetes blog [Kubernetes Blog](https://kubernetes.io/blog/2025/03/24/ingress-nginx-cve-2025-1974/)
+More information on the implementation of the workaround can be found at the [Kubernetes Blog](https://kubernetes.io/blog/2025/03/24/ingress-nginx-cve-2025-1974/)
 
 ## What we are doing
 DIVD is currently working to identify parties that are running a vulnerable version of Ivanti EPMM and to notify these parties. 
