--- a/_cases/2025/DIVD-2025-00016.md
+++ b/_cases/2025/DIVD-2025-00016.md
@@ -36,7 +36,7 @@ timeline:
 ---
 
 ## Summary
-Within the Ingress-Nginx there is a Remote Code Execution found. This can result in a complete cluster takeover. This vulnerability has been resolved in the upgraded version of the controller. 
+The Ingress-Nginx software contains a Remote Code Execution vulenrability. This vulnerability can result in a complete cluster takeover. it has been resolved in the upgraded version of the controller. 
 The patched versions are 1.12.1 or 1.11.5
 
 ## Recommendations
