--- a/_cases/2025/DIVD-2025-00016.md
+++ b/_cases/2025/DIVD-2025-00016.md
@@ -45,7 +45,7 @@ If the implementation of these specified versions is not feasible you can reduse
 More information on the implementation of the workaround can be found at the [Kubernetes Blog](https://kubernetes.io/blog/2025/03/24/ingress-nginx-cve-2025-1974/)
 
 ## What we are doing
-DIVD is currently working to identify parties that are running a vulnerable version of Ivanti EPMM and to notify these parties. 
+DIVD is currently working to identify parties that are running a vulnerable version of Ingress-Nginx and to notify these parties. 
 
 {% include timeline.html %}
 
