--- a/_cases/2025/DIVD-2025-00016.md
+++ b/_cases/2025/DIVD-2025-00016.md
@@ -2,7 +2,7 @@
 layout: case
 title: "Unauthenticated Remote Code Execution in Ingress NGINX"
 author: Davy Aarts
-lead: 
+lead: Victor Pasman
 excerpt: "Unauthenticated Remote Code Execution in Ingress NGINX can result in cluster takeover"
 researchers:
 - Victor Pasman
