--- a/_cases/2025/DIVD-2025-00005.md
+++ b/_cases/2025/DIVD-2025-00005.md
@@ -7,6 +7,7 @@ lead: Joris Cras
 researchers:
 - Ad Buckens (extern)
 - Joris Cras
+- Davy Aarts
 product: 
 - Automated Tank Gauge Systems (ATG)
 - Veeder-Root TLS-250
