--- a/_cases/2025/DIVD-2025-00016.md
+++ b/_cases/2025/DIVD-2025-00016.md
@@ -16,7 +16,7 @@ versions:
 - Ingress-Nginx Controller versions below 1.11.0
 
 recommendation: "Upgrade Ingress-Nginx as soon as possible to version 1.12.1 or 1.11.5"
-workaround: "For users unable to upgrade immediately, Kubernetes recommends turning off the Validating Admission Controller feature of ingress-nginx. Instructions for this can be found in the https://kubernetes.io/blog/2025/03/24/ingress-nginx-cve-2025-1974/"
+workaround: "For users unable to upgrade immediately, Kubernetes recommends turning off the Validating Admission Controller feature of Ingress-Nginx. Instructions for this can be found in the https://kubernetes.io/blog/2025/03/24/ingress-nginx-cve-2025-1974/"
 patch_status: "Fully patched"
 status: Open
 start: 2025-05-06
