--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -30,6 +30,9 @@ start: 2023-10-04
 end: 2025-03-31
 timeline:
 - start: 2023-10-04
+  end: 
+  event: "Case Opend"
+- start: 
   end: 2025-03-31
   event: "Case Closed"
 ---
