--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -29,12 +29,30 @@ status: Closed
 start: 2023-10-04
 end: 2025-03-31
 timeline:
-- start: 2023-10-04
-  end: 
-  event: "Case Opend"
+- start: 2024-03-01
+  end:
+  event: "Case started"
+- start: 2024-03-01
+  end:
+  event: "Discovery of NGOs and their domains started."
+- start: 2024-09-30
+  end:
+  event: "Roughly 56.000 candidate NGOs found for scanning, continuing discovery."
+- start: 2024-11-04
+  end: 2024-11-20
+  event: "Vulnerability scanning a set of 67 NGO's for the collab project, ending with notifications being send out"
+- start: 2025-01-06
+  end: 2025-01-29
+  event: "Vulnerability scanning a set of 20 NGO's for the global project, ending with notifications being send out"
+- start: 2025-02-02
+  end:
+  event: "Vulnerability scanning a set of ~200 NGO's for the collab project, ending with notifications being send out"
+- start: 2025-02-02
+  end:
+  event: "Vulnerability scanning a set of 30 NGO's for the global project, ending with notifications being send out"
 - start: 
   end: 2025-03-31
-  event: "Case Closed"
+  event: "Case closed"
 ---
 
 ## Summary
