--- a/_cases/2025/DIVD-2025-00005.md
+++ b/_cases/2025/DIVD-2025-00005.md
@@ -36,6 +36,9 @@ timeline:
 - start: 2025-04-29
   end: 
   event: "Start scanning"
+- start: 2025-05-22
+  end:
+  event: "Notifications have been send out to vulnerable network owners."
 #ips: n/a
 ---
 ## Summary
