--- a/_cases/2025/DIVD-2025-00018.md
+++ b/_cases/2025/DIVD-2025-00018.md
@@ -43,8 +43,7 @@ creds: 12617
 ---
 ## Summary
 
-{% comment %} Nog aanvullen met persbericht! {% endcomment %}
-Last year, Operation Endgame marked the biggest anti-botnet operation to date. The The Dutch Police, in cooperation with policy units form Germany, France, Denmark, the United States and United Kingdom and suppor to Europol and Eurojust had infiltrated a number of botnets. Now, they are back. Operation Endgame 2.0 marks new takedowns and new information obtained by the organizations behind this operation.
+Last year, Operation Endgame marked the biggest anti-botnet operation to date. The The Dutch Police, in cooperation with policy units form Germany, France, Denmark, the United States and United Kingdom and suppor to Europol and Eurojust had infiltrated a number of botnets. Now, they are back. [Operation Endgame 2.0](https://www.politie.nl/nieuws/2025/mei/22/11-internationale-politiediensten-pakken-met-operation-endgame-door-in-bestrijding-ransomware.html) marks new takedowns and new information obtained by the organizations behind this operation.
 
 This data has been shared with us and various other parties like [Have I Been Pwned](https://haveibeenpwned.com/), [Spamhaus](https://www.spamhaus.org/resource-hub/malware/operation-endgame-botnets-disrupted-after-international-action/), [Project No More Leaks](https://www.politie.nl/onderwerpen/no-more-leaks.html), [Project Check je Hack](https://www.politie.nl/informatie/checkjehack.html), the (Dutch) [NCSC](https://ncsc.nl),  [CSIRT-DSP](https://csirtdsp.nl/), and [Digital Trust Center](https://www.digitaltrustcenter.nl/).
 
@@ -122,4 +121,4 @@ A: Yes it is. Under Dutch law and European privacy regulations, we can process t
 
 ## More information
 * [Operation Endgame website](https://www.operation-endgame.com)
-* [To fill with press release](https://placeholder.net)
+* [Operation Endgame persbericht](https://www.politie.nl/nieuws/2025/mei/22/11-internationale-politiediensten-pakken-met-operation-endgame-door-in-bestrijding-ransomware.html)
