--- a/_cases/2025/DIVD-2025-00018.md
+++ b/_cases/2025/DIVD-2025-00018.md
@@ -121,4 +121,5 @@ A: Yes it is. Under Dutch law and European privacy regulations, we can process t
 
 ## More information
 * [Operation Endgame website](https://www.operation-endgame.com)
-* [Operation Endgame persbericht](https://www.politie.nl/nieuws/2025/mei/22/11-internationale-politiediensten-pakken-met-operation-endgame-door-in-bestrijding-ransomware.html)
+* [Operation Endgame persbericht Nederlandse Politie](https://www.politie.nl/nieuws/2025/mei/22/11-internationale-politiediensten-pakken-met-operation-endgame-door-in-bestrijding-ransomware.html)
+* [Operation Endgame perbericht Europol](https://www.europol.europa.eu/media-press/newsroom/news/operation-endgame-strikes-again-ransomware-kill-chain-broken-its-source)
