--- a/_cases/2025/DIVD-2025-00018.md
+++ b/_cases/2025/DIVD-2025-00018.md
@@ -41,7 +41,8 @@ creds: 12617
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 redirect_from:  
-- /endgame2025
+- /endgame2025/
+- /DIVD-2025-00018/
 ---
 ## Summary
 
