--- a/_cases/2024/DIVD-2024-00043.md
+++ b/_cases/2024/DIVD-2024-00043.md
@@ -21,7 +21,7 @@ versions:
 recommendation: "Install the patched version of CyberAudit-Web"
 workaround: "No workaround available"
 patch_status: Released
-status : Open
+status : Closed
 start: 2024-10-22
 end:
 timeline:
@@ -40,7 +40,7 @@ timeline:
 - start: 2025-02-26
   end:
   event: "CVEs published."
-# ips: 0
+ ips: 87
 # The lines below redirect all the CVE references to our site
 # Uncommend these lines if we are the CNA of record. (ask @cna_admins on Slack if you don't know)
 jekyll-secinfo:
