--- a/_cases/2024/DIVD-2024-00043.md
+++ b/_cases/2024/DIVD-2024-00043.md
@@ -40,6 +40,9 @@ timeline:
 - start: 2025-02-26
   end:
   event: "CVEs published."
+- start: 2025-05-24
+  end:
+  event: "Case closed."
  ips: 87
 # The lines below redirect all the CVE references to our site
 # Uncommend these lines if we are the CNA of record. (ask @cna_admins on Slack if you don't know)
