--- a/_cases/2024/DIVD-2024-00043.md
+++ b/_cases/2024/DIVD-2024-00043.md
@@ -23,7 +23,7 @@ workaround: "No workaround available"
 patch_status: Released
 status : Closed
 start: 2024-10-22
-end:
+end: 2025-05-24
 timeline:
 - start: 2024-10-22
   end:
