--- a/_cases/2025/DIVD-2025-00002.md
+++ b/_cases/2025/DIVD-2025-00002.md
@@ -19,8 +19,9 @@ versions:
 recommendation: "Apply the patch as soon as possible for impacted products"
 workaround: "To mitigate the risk posed by these vulnerabilities, users should ensure that access to the SSL-VPN firewalls is limited to trusted sources, or to disable SSL-VPN access from the internet entirely"
 patch_status: Patch available
-status : Open
+status : Closed
 start: 2025-01-09
+end: 2025-05-10
 timeline:
 - start: 2025-01-09
   end:
