Updated the GitHub workflow to fail on Jekyll build error

--- a/_cases/3000/DIVD-3000-00001.md
+++ b/_cases/3000/DIVD-3000-00001.md
@@ -27,7 +27,7 @@ status : Open
 start: 2023-12-07
 end: 
 timeline:
-- start: 2023-12-03
+- start: XXXX-XX-XX
   end:
   event: "Vulnerability reported to Grafana"
 - start: 2023-12-07
