Replicate the error from PR #956

--- a/_cases/2025/DIVD-2025-00019.md
+++ b/_cases/2025/DIVD-2025-00019.md
@@ -27,13 +27,13 @@ status : Open
 start: 2025-05-22
 end:
 timeline:
-- start: xxxx-04-22
+- start: 2025-04-22
   end: 2025-05-22
   event: "Period of collecting data."
 - start: 2025-05-23
   end:
   event: "Dutch National Police goes public with Operation Endgame 2.0."
-- start: 2024-05-23
+- start: XXXX-XX-XX
   end: open
   event: "DIVD sends out first notifications."
 ips: n/a
