--- a/_cases/2025/DIVD-2025-00019.md
+++ b/_cases/2025/DIVD-2025-00019.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "unauthenticated file upload in Visual Composer (VCFRAMEWORK)"
+title: "Unauthenticated file upload in Visual Composer (VCFRAMEWORK)"
 excerpt: "Unauthenticated file upload (leading to RCE)vin SAP Visual Composer in SAP JAVA Posted on May 2025"
 author: Joris van de Vis
 lead: Joris van de Vis
