--- a/_cases/2025/DIVD-2025-00019.md
+++ b/_cases/2025/DIVD-2025-00019.md
@@ -11,6 +11,7 @@ cves: CVE-2025-31324
 product: SAP
 versions: SAP Visual Composer in SAP JAVA 
 recommendation: "Patches are available now from the vendor. See SAP Security notes 3594142 and 3604119."
+patch_status: Fully patched
 -workaround: https://me.sap.com/notes/3593336/E
 start: 2025-05-20
 end:
