--- a/_cases/2025/DIVD-2025-00019.md
+++ b/_cases/2025/DIVD-2025-00019.md
@@ -44,7 +44,7 @@ On April 25, 2025, SAP released an out of band patch for a RCE vulnerability tha
 {% include timeline.html %}
 
 ## More information
-* [SAP Security patch] (https://me.sap.com/notes/3594142)
+* [SAP Security patch 3594142](https://me.sap.com/notes/3594142)
 * [SecurityBridge blog on CVE-2025-31324] (https://securitybridge.com/blog/cve-2025-31324/)
 * [Blog eclecticiq] (https://blog.eclecticiq.com/china-nexus-nation-state-actors-exploit-sap-netweaver-cve-2025-31324-to-target-critical-infrastructures)
 * [NIST CVE-2025-31324] (https://nvd.nist.gov/vuln/detail/CVE-2025-31324)
