--- a/_cases/2025/DIVD-2025-00019.md
+++ b/_cases/2025/DIVD-2025-00019.md
@@ -35,7 +35,7 @@ On April 25, 2025, SAP released an out of band patch for a RCE vulnerability tha
 
 ## What you can do
 
-* strongly advises impacted organisations to immediately apply Security Patch [Note 3594142] to their affected SAP applications as soon as possible.
+* strongly advises impacted organisations to immediately apply Security Patch [Note 3594142](https://me.sap.com/notes/3581961) to their affected SAP applications as soon as possible.
 
 ## What we are doing
 
