--- a/_cases/2025/DIVD-2025-00019.md
+++ b/_cases/2025/DIVD-2025-00019.md
@@ -1,7 +1,7 @@
 ---
 layout: case
 title: "Unauthenticated file upload in Visual Composer (VCFRAMEWORK)"
-excerpt: "Unauthenticated file upload (leading to RCE)vin SAP Visual Composer in SAP JAVA Posted on May 2025"
+excerpt: "SAP NetWeaver Visual Composer Metadata Uploader lacks proper authorization, allowing unauthenticated users to upload malicious files that can compromise the host system."
 author: Joris van de Vis
 lead: Joris van de Vis
 status : Open
