--- a/_cases/2025/DIVD-2025-00019.md
+++ b/_cases/2025/DIVD-2025-00019.md
@@ -7,6 +7,8 @@ lead: Joris van de Vis
 status : Open
 researchers:
 - Joris van de Vis
+- Rudy Dijkstra
+- Vladimir Egorov
 cves: CVE-2025-31324
 product: SAP
 versions: SAP Visual Composer in SAP JAVA 
@@ -22,12 +24,12 @@ timeline:
 - start: 2025-05-20
   end:
   event:  "Even though Vulnerability has lots of attention by vendor and researchers, DIVD starts research to try and add a layer of protection to customers who somehow missed all info."
-- start: 2025-05-27
-  end:
+- start: 2025-06-02
+  end: 2025-06-02
   event: "DIVD starts scanning the internet for open SAP instances."
-- start: 2025-05-28
-  end:
-  event:  DIVD starts with identifying owners.
+- start: 2025-06-02
+  end: 2025-06-02
+  event:  DIVD starts with identifying owners and sending out emails.
 ---
 ## Summary
 
