--- a/_cases/2025/DIVD-2025-00017.md
+++ b/_cases/2025/DIVD-2025-00017.md
@@ -21,8 +21,9 @@ versions:
 recommendation: "Update to one of the following Ivanti Endpoint Manager Mobile (EPMM) versions 11.12.0.5, 12.3.0.2, 12.4.0.2 or 12.5.0.1"
 workaround: "Users can mitigate the threat by filtering access to the API using either the built in Portal ACLs functionality of Ivanti EPMM or an external WAF"
 patch_status: "Fully patched"
-status: Open
+status: Closed
 start: 2025-05-14
+end: 2025-06-03
 timeline:
 - start: 2025-05-14
   end:
@@ -36,6 +37,13 @@ timeline:
 - start: 2025-05-14
   end:
   event: "Notifications have been send out to vulnerable network owners."
+- start: 2025-06-03
+  end:
+  event: "DIVD sent out a second round of notifications."
+- start: 2025-06-03
+  end:
+  event: "Case closed."
+ips: 1500
 ---
 
 ## Summary
