--- a/_cases/2025/DIVD-2025-00004.md
+++ b/_cases/2025/DIVD-2025-00004.md
@@ -22,9 +22,9 @@ versions:
 recommendation: Install the updates provided by the vendor. Make sure your management interface is not exposed to the internet.
 patch_status: Fully patched
 #workaround: n/a
-status : Open
+status : Closed
 start: 2025-02-20
-end: 
+end: 2025-05-04
 timeline:
 - start: 2025-02-12
   end:
@@ -53,7 +53,13 @@ timeline:
 - start: 2025-03-10
   end:
   event: "DIVD begins notifying owners of vulnerable systems."
-# ips: 0 
+- start: 2025-05-04
+  end:
+  event: "DIVD sent out a second round of notifications."
+- start: 2024-05-04
+  end:
+  event: "Case closed."
+ips: 1758
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 # creds: 0 
