--- a/_cases/2025/DIVD-2025-00010.md
+++ b/_cases/2025/DIVD-2025-00010.md
@@ -9,6 +9,7 @@ researchers:
 - Yusuf Onay
 - Barre Dijkstra
 - Christian van Bruggen (External researcher)
+- Jort Geurts
 cves:
 - CVE-2025-22457
 product:
@@ -18,8 +19,9 @@ versions:
 recommendation: "Update to Ivanti Connect Secure version 22.7R2.6 or later."
 workaround: "There is no known effective workaround. Updating is strongly recommended."
 patch_status: "Fully patched, for supported versions"
-status: Open
+status: Closed
 start: 2025-04-04
+end: 2025-06-04
 timeline:
 - start: 2025-04-04
   end:
@@ -33,6 +35,13 @@ timeline:
 - start: 2025-04-04
   end:
   event: "DIVD starts notifying network owners with a vulnerable devices in their network."
+- start: 2025-06-04
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
+- start: 2025-06-04
+  end:
+  event: "Case closed"
+ips: 5296
 ---
 
 ## Summary
