--- a/_cases/2025/DIVD-2025-00019.md
+++ b/_cases/2025/DIVD-2025-00019.md
@@ -7,6 +7,8 @@ lead: Joris van de Vis
 status : Open
 researchers:
 - Joris van de Vis
+- Vladimir Egorov
+- Rudy Dijkstra
 cves: CVE-2025-31324
 product: SAP
 versions: SAP Visual Composer in SAP JAVA 
@@ -27,7 +29,10 @@ timeline:
   event: "DIVD starts scanning the internet for open SAP instances."
 - start: 2025-05-28
   end:
-  event:  DIVD starts with identifying owners.
+  event: "DIVD starts with identifying owners."
+- start: 2025-06-03
+  end:
+  event: "Notifications have been send out to vulnerable network owners."
 ---
 ## Summary
 
