--- a/_cases/2025/DIVD-2025-00016.md
+++ b/_cases/2025/DIVD-2025-00016.md
@@ -33,6 +33,17 @@ timeline:
 - start: 2025-05-22
   end:
   event: "Notifications have been send out to vulnerable network owners."
+- start: 2025-06-05
+  end:
+  event: "Second scan"
+- start: 2025-06-05
+  end:
+  event: "DIVD begins notifying owners of vulnerable systems."
+- start: 2025-06-05
+  end:
+  event: "DIVD sent out a second round of notifications."
+- start: 2024-06-05
+  end:
 ---
 
 ## Summary
