--- a/_cases/2025/DIVD-2025-00005.md
+++ b/_cases/2025/DIVD-2025-00005.md
@@ -39,6 +39,15 @@ timeline:
 - start: 2025-05-22
   end:
   event: "DIVD starts notifying network owners with a vulnerable devices in their network."
+- start: 2025-06-05
+  end:
+  event: "Second scan"
+- start: 2025-06-06
+  end:
+  event: "DIVD begins notifying owners of vulnerable systems."
+- start: 2025-06-06
+  end:
+  event: "DIVD sent out a second round of notifications."
 #ips: n/a
 ---
 ## Summary
