--- a/_cases/2025/DIVD-2025-00009.md
+++ b/_cases/2025/DIVD-2025-00009.md
@@ -2,7 +2,7 @@
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
 title: Sungrow's iSolarCloud MQTT lacking permissions
-excerpt: "On behalf of ENCS DIVD has reported a vulnerability to SunGrow that allowed a malicious user of iSlarCloud to receive all MQTT messages of all connected devices."
+excerpt: "On behalf of ENCS, DIVD has reported a vulnerability to SunGrow that allowed a malicious user of iSolarCloud to receive all MQTT messages of all connected devices/inverters."
 author: Frank Breedijk
 lead: Frank Breedijk
 researchers:
