--- a/_cases/2025/DIVD-2025-00009.md
+++ b/_cases/2025/DIVD-2025-00009.md
@@ -66,7 +66,7 @@ jekyll-secinfo:
 
 Harm van den Brink, DIVD volunteer, in his capacity as researcher at [ENCS](https://encs.eu/) has discovered a vulnerability in [SunGrows iSolarCloud](https://isolarcloud.com) that allowed a malicious user to subscribe, and read all data sent to the underlying MQTT server by the SunGrow devices connected to it.
 
-The credentials for the MQTT server as well as the RSA decryption key could be extracted from the javascript code and DOM of the iSolarCloud website. Using these credentials a malicious user could then subscribe to the `#` topic inof the MQTT server causing him to receive all data from all connected devices. Using the RSA decruption key obtained in the same manner all the messages form all topics could be decrypted as well.
+The credentials for the MQTT server as well as the RSA decryption key could be extracted from the javascript code and DOM of the iSolarCloud website. Using these credentials a malicious user could then subscribe to the `#` topic of the MQTT server causing to receive all data from all connected devices. Using the RSA decryption key obtained in the same manner all the messages from all topics could be decrypted as well.
 
 The vulnerability has been patched by SunGrow on 6 June 2025, and exploiutation is no longer possible.
 
