--- a/_cases/2025/DIVD-2025-00009.md
+++ b/_cases/2025/DIVD-2025-00009.md
@@ -68,7 +68,7 @@ Harm van den Brink, DIVD volunteer, in his capacity as researcher at [ENCS](http
 
 The credentials for the MQTT server as well as the RSA decryption key could be extracted from the javascript code and DOM of the iSolarCloud website. Using these credentials a malicious user could then subscribe to the `#` topic of the MQTT server causing to receive all data from all connected devices. Using the RSA decryption key obtained in the same manner all the messages from all topics could be decrypted as well.
 
-The vulnerability has been patched by SunGrow on 6 June 2025, and exploiutation is no longer possible.
+The vulnerability has been patched by SunGrow on 6 June 2025, and exploitation is no longer possible.
 
 ## What you can do
 
