--- a/_cases/2025/DIVD-2025-00009.md
+++ b/_cases/2025/DIVD-2025-00009.md
@@ -29,7 +29,7 @@ timeline:
   event: "DIVD reaches out to SunGrow"
 - start: 2025-04-23
   end:
-  event: "2nd attaempt of DIVD to reach out to SunGrow, SunGrow replies"
+  event: "2nd attempt of DIVD to reach out to SunGrow, SunGrow replies"
 - start: 2025-04-23
   end:
   event: "DIVD sends vulnerability report to SunGrow"
