--- a/_cases/2025/DIVD-2025-00012.md
+++ b/_cases/2025/DIVD-2025-00012.md
@@ -19,7 +19,7 @@ product:
 versions: 
 - All versions
 recommendation: No patch available, product is no longer supported. Apply mitigating measures
-patch_status: No patch available, product is no longer supported,
+patch_status: No patch available, product is no longer supported
 workaround: Apply the mitigating measures suggested by the vendor
 status : Open
 start: 2025-04-22
