--- a/_cases/2025/DIVD-2025-00012.md
+++ b/_cases/2025/DIVD-2025-00012.md
@@ -27,7 +27,7 @@ end:
 timeline:
 - start: 2025-04-22
   end:
-  event: "Vulnerability reported to DIVD by ENCS"
+  event: "Vulnerability reported to DIVD"
 - start: 2025-04-23
   end:
   event: "DIVD reaches out to Schneider Electric PSIRT"
