--- a/_cases/2025/DIVD-2025-00012.md
+++ b/_cases/2025/DIVD-2025-00012.md
@@ -33,7 +33,7 @@ timeline:
   event: "DIVD reaches out to Schneider Electric PSIRT"
 - start: 2025-04-23
   end:
-  event: "Scheiner Electric acknowledges receipt of report"
+  event: "Schneider Electric acknowledges receipt of report"
 - start: 2025-04-23
   end:   2025-04-23
   event: "Time to acknowledge"
