--- a/_cases/2025/DIVD-2025-00012.md
+++ b/_cases/2025/DIVD-2025-00012.md
@@ -40,7 +40,7 @@ timeline:
   # Time to acknowledge is an important metric we like to track it
 - start: 2025-04-28
   end:
-  event: "Scheinder Electric assigns SE-18861 to SE-18864 to vulnerabilities"
+  event: "Schneider Electric assigns SE-18861 to SE-18864 to vulnerabilities"
 - start: 2025-05-20
   end:
   event: "Scheinder Electric confirms vulnerabilities exist"
