--- a/_cases/2025/DIVD-2025-00012.md
+++ b/_cases/2025/DIVD-2025-00012.md
@@ -43,7 +43,7 @@ timeline:
   event: "Schneider Electric assigns SE-18861 to SE-18864 to vulnerabilities"
 - start: 2025-05-20
   end:
-  event: "Scheinder Electric confirms vulnerabilities exist"
+  event: "Schneider Electric confirms vulnerabilities exist"
 - start: 2025-06-10
   end:
   event: "Scheinder Electric publishes CVE records"
