--- a/_cases/2025/DIVD-2025-00012.md
+++ b/_cases/2025/DIVD-2025-00012.md
@@ -46,7 +46,7 @@ timeline:
   event: "Schneider Electric confirms vulnerabilities exist"
 - start: 2025-06-10
   end:
-  event: "Scheinder Electric publishes CVE records"
+  event: "Schneider Electric publishes CVE records"
 - start: 2025-06-10
   end:
   event: "Scheinder Electric publishes advisory SEVD-2025-161-03"
