--- a/_cases/2025/DIVD-2025-00012.md
+++ b/_cases/2025/DIVD-2025-00012.md
@@ -49,7 +49,7 @@ timeline:
   event: "Schneider Electric publishes CVE records"
 - start: 2025-06-10
   end:
-  event: "Scheinder Electric publishes advisory SEVD-2025-161-03"
+  event: "Schneider Electric publishes advisory SEVD-2025-161-03"
 - start: 2025-04-23
   end:   open
   event: "Time to patch (N/A)"
