--- a/_cases/2025/DIVD-2025-00012.md
+++ b/_cases/2025/DIVD-2025-00012.md
@@ -66,7 +66,7 @@ jekyll-secinfo:
 ---
 ## Summary
 
-Wilco van Beijnum, DIVD volunteer, in his capacity as researcher at [ENCS](https://encs.eu/) has discovered four vulnerabilities in [Schneider Electric EVLink Wallbox](https://www.se.com/nl/nl/product-range/62395-evlink-wallbox/#products) EV charger, that allow authenticated users to read and write arbitrary files on the device, execute arbitraty code via this method, inject commands via the configuration options and conduct stored crocss site scripting via report deletion.
+Wilco van Beijnum, DIVD volunteer, has discovered four vulnerabilities in [Schneider Electric EVLink Wallbox](https://www.se.com/nl/nl/product-range/62395-evlink-wallbox/#products) EV charger, that allow authenticated users to read and write arbitrary files on the device, execute arbitrary code via this method, inject commands via the configuration options and conduct stored cross site scripting in the report functionality.
 
 The vulnerabilities will not be patched by Schneider Electric as the devices at the end of their commercial life. The vendor is offering a replacement product that is not affected by these vulnerabilities as well as a [detailed advisory](https://download.schneider-electric.com/files?p_Doc_Ref=SEVD-2025-161-03&p_enDocType=Security+and+Safety+Notice&p_File_Name=SEVD-2025-161-03.pdf) that contains mitigating measures.
 
