--- a/_cases/2025/DIVD-2025-00012.md
+++ b/_cases/2025/DIVD-2025-00012.md
@@ -75,7 +75,7 @@ The vulnerabilities will not be patched by Schneider Electric as the devices at 
 If you have a Scheinder Electric EVLink Wallbox it is best to decommision this devices, refrain from selling it second hand and replace it with a product that can be updated, has a long projected support time and is not affected by these vulnerabilities.
 
 If you choose to keep this device in operation it is recommended that you take the following measures:
-* Make sure the device is not reachable from any untrusted network (internet, visitor network, public wifi , etc)
+* Make sure the device is not reachable from any untrusted network (internet, visitor network, public wifi, etc.)
 * Put the devices on a separate vlan or isolate it in another way
 * Check the device's log for abuse regularly
 * Choose a strong password
