--- a/_cases/2025/DIVD-2025-00012.md
+++ b/_cases/2025/DIVD-2025-00012.md
@@ -76,7 +76,7 @@ If you have a Scheinder Electric EVLink Wallbox it is best to decommision this d
 
 If you choose to keep this device in operation it is recommended that you take the following measures:
 * Make sure the device is not reachable from any untrusted network (internet, visitor network, public wifi, etc.)
-* Put the devices on a separate vlan or isolate it in another way
+* Put the devices on a separate VLAN or isolate it in another way
 * Check the device's log for abuse regularly
 * Choose a strong password
 * Change the password regularly
