Added summary, cve records and cmall corrections

--- a/_cases/2025/DIVD-2025-00012.md
+++ b/_cases/2025/DIVD-2025-00012.md
@@ -2,7 +2,7 @@
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
 title: Four vulnerabilities in Schneider Electric EVLink Wallbox
-excerpt: ""
+excerpt: "Wilco van Beijnum has discovered four vulnerabilities in Schneider Electric's EVLink Wallbox"
 author: Frank Breedijk
 lead: Frank Breedijk
 researchers:
@@ -66,7 +66,7 @@ jekyll-secinfo:
 ---
 ## Summary
 
-Wilco van Beijnum, DIVD volunteer, has discovered four vulnerabilities in [Schneider Electric EVLink Wallbox](https://www.se.com/nl/nl/product-range/62395-evlink-wallbox/#products) EV charger, that allow authenticated users to read and write arbitrary files on the device, execute arbitrary code via this method, inject commands via the configuration options and conduct stored cross site scripting in the report functionality.
+DIVD researcher Wilco van Beijnum has discovered four vulnerabilities in [Schneider Electric EVLink Wallbox](https://www.se.com/nl/nl/product-range/62395-evlink-wallbox/#products) EV charger, that allow authenticated users to read and write arbitrary files on the device, execute arbitrary code via this method, inject commands via the configuration options and conduct stored cross site scripting in the report functionality.
 
 The vulnerabilities will not be patched by Schneider Electric as the devices at the end of their commercial life. The vendor is offering a replacement product that is not affected by these vulnerabilities as well as a [detailed advisory](https://download.schneider-electric.com/files?p_Doc_Ref=SEVD-2025-161-03&p_enDocType=Security+and+Safety+Notice&p_File_Name=SEVD-2025-161-03.pdf) that contains mitigating measures.
 
@@ -83,7 +83,9 @@ If you choose to keep this device in operation it is recommended that you take t
 
 ## What we are doing
 
-DIVD has reported the vulnerability to Scheinder Electric on behalf of [ENCS](https://encs.eu). As a CNASchneider Electric has registered CVEs for these vulnerabilities.
+DIVD has reported the vulnerability to Scheinder Electric. As they are a CNA themselves, Schneider Electric has registered CVEs for these vulnerabilities.
+
+We are currently making a decision if it makes sense to scan for vulnerable devices and warn the owners.
 
 {% comment %}  Leave this here, so we see a timeline{% endcomment %}
 {% include timeline.html %}
