--- a/_cases/2025/DIVD-2025-00012.md
+++ b/_cases/2025/DIVD-2025-00012.md
@@ -83,7 +83,7 @@ If you choose to keep this device in operation it is recommended that you take t
 
 ## What we are doing
 
-DIVD has reported the vulnerability to Scheinder Electric. As they are a CNA themselves, Schneider Electric has registered CVEs for these vulnerabilities.
+DIVD has reported the vulnerability to Schneider Electric. As they are a CNA themselves, Schneider Electric has registered CVEs for these vulnerabilities.
 
 We are currently making a decision if it makes sense to scan for vulnerable devices and warn the owners.
 
