--- a/_cases/2025/DIVD-2025-00019.md
+++ b/_cases/2025/DIVD-2025-00019.md
@@ -33,6 +33,12 @@ timeline:
 - start: 2025-06-03
   end:
   event: "Notifications have been send out to vulnerable network owners."
+- start: 2025-06-18
+  end:
+  event: "DIVD starts scanning the internet for open SAP instances second time."
+- start: 2025-06-24
+  end:
+  event: "Notifications have been send out to vulnerable network owners."
 ---
 ## Summary
 
