--- a/_cases/2025/DIVD-2025-00032.md
+++ b/_cases/2025/DIVD-2025-00032.md
@@ -13,7 +13,8 @@ product: Pterodactyl
 versions: Pterodactyl 1.11.10 and below 
 recommendation: "Upgrade to 1.11.11 or higher"
 patch_status: Fully patched
-workaround: "No workaround other than patching"
+workaround: "Available"
+
 status: Open
 start: 2025-06-20
 end:
