--- a/_cases/2025/DIVD-2025-00032.md
+++ b/_cases/2025/DIVD-2025-00032.md
@@ -32,7 +32,12 @@ On May 20, 2025, Pterodactyl released a patch for a vulnerability that is in 1.1
 
 ## What you can do
 
-* Strongly advises impacted organisations to immediately apply the latest version as shown on the following [Advisory](https://github.com/pterodactyl/panel/security/advisories/GHSA-24wv-6c99-f843) 
+It is strongly advised that all impacted organisations immediately update their Pterodactyl Panel installations to the latest available version (v1.11.11) as described in the following [Advisory](https://github.com/pterodactyl/panel/security/advisories/GHSA-24wv-6c99-f843).
+
+Installing version v1.11.11 fully resolves the critical vulnerability identified as CVE-2025-49132, which allows unauthenticated remote code execution (RCE) on the server hosting the Panel.
+
+If updating to the latest version is not immediately feasible, a temporary workaround is possible. Organisations can mitigate the threat by implementing protective measures at the network or application layer, for more information see the [Advisory](https://github.com/pterodactyl/panel/security/advisories/GHSA-24wv-6c99-f843).
+
 
 ## What we are doing
 
