--- a/_cases/2025/DIVD-2025-00032.md
+++ b/_cases/2025/DIVD-2025-00032.md
@@ -46,7 +46,7 @@ If updating to the latest version is not immediately feasible, a temporary worka
 
 ## What we are doing
 
-* We are scanning the internet for vulnerable Pterodactyl servers, and will notify system owners via the listed abuse contacts.
+DIVD is currently working to identify parties that are running a vulnerable version of Pterodactyl and to notify these parties.
 
 {% include timeline.html %}
 
