--- a/_cases/2025/DIVD-2025-00032.md
+++ b/_cases/2025/DIVD-2025-00032.md
@@ -30,7 +30,7 @@ timeline:
 
 The Pterodactyl Panel software contains a critical Remote Code Execution (RCE) vulnerability that allows unauthenticated attackers to execute arbitrary code on the server. Successful exploitation can result in full system compromise, including access to credentials, sensitive data, and hosted servers.
 
-The vulnerability is known to be actively exploited in the wild. Organisations running vulnerable versions are at immediate risk.
+Active exploitation attempts of this vulnerability have been observed shortly after its disclosure. While no confirmed breaches have been reported at this time, it is only a matter of time before unpatched systems are targeted successfully.
 
 The issue has been resolved in version 1.11.11 of the Pterodactyl Panel. It is strongly recommended to update to the latest version as soon as possible.
 
