--- a/_cases/2025/DIVD-2025-00016.md
+++ b/_cases/2025/DIVD-2025-00016.md
@@ -44,7 +44,7 @@ timeline:
   event: "DIVD sent out a second round of notifications."
 - start: 2025-06-26
   end:
-  event: "Third scan started
+  event: "Third scan started"
 - start: 2025-06-26
   end:
   event: "DIVD begins notifying owners third time of vulnerable systems.
