--- a/_cases/2025/DIVD-2025-00016.md
+++ b/_cases/2025/DIVD-2025-00016.md
@@ -47,7 +47,7 @@ timeline:
   event: "Third scan started"
 - start: 2025-06-26
   end:
-  event: "DIVD begins notifying owners third time of vulnerable systems.
+  event: "DIVD begins notifying owners third time of vulnerable systems."
 ---
 
 ## Summary
