--- a/_cases/2025/DIVD-2025-00031.md
+++ b/_cases/2025/DIVD-2025-00031.md
@@ -40,7 +40,7 @@ ips:
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
-Citrix ADC Netscaler is vulnerable to CVE-2025-6543 and CVE-2025-5777 which can lead to an unauthorized attacker being able to execute command's.
+Citrix ADC Netscaler is vulnerable to {% cve 2025-6543 %} and {% cve 2025-5777 %} which can lead to an unauthorized attacker being able to execute command's.
 These vulnerabilities are being exploited actively in the world.
 
 ## What you can do
@@ -54,5 +54,7 @@ We are actively scanning and communicating with vulnerable system owners
 
 
 ## More information
+* {% cve 2025-5777 %}
+* {% cve 2025-6543 %}
 * [New's article the hacker news](https://thehackernews.com/2025/06/citrix-releases-emergency-patches-for.html)
 * [Citrix Advisory](https://support.citrix.com/support-home/kbsearch/article?articleNumber=CTX694788)
