--- a/_cases/2025/DIVD-2025-00031.md
+++ b/_cases/2025/DIVD-2025-00031.md
@@ -36,7 +36,7 @@ timeline:
 - start: 2025-06-26
   end:
   event: "DIVD sent out a first batch of notifications."
-ips: 
+#ips: 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
