--- a/_cases/2025/DIVD-2025-00031.md
+++ b/_cases/2025/DIVD-2025-00031.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: Citrix systems vulnerable for CVE-2025-5777 and CVE-2025-5349
+title: "Citrix systems vulnerable for CVE-2025-5777 and CVE-2025-5349"
 excerpt: "DIVD is notifying owners of vulnerable Citrix ADC and Gateway systems"
 author: Victor Pasman
 lead: Davy Aarts
