--- a/_cases/2025/DIVD-2025-00031.md
+++ b/_cases/2025/DIVD-2025-00031.md
@@ -17,7 +17,7 @@ versions:
 - NetScaler ADC and NetScaler Gateway 14.1 BEFORE 14.1-47.46
 - NetScaler ADC and NetScaler Gateway 13.1 BEFORE 13.1-59.19
 - NetScaler ADC 13.1-FIPS and NDcPP  BEFORE 13.1-37.236-FIPS and NDcPP
-recommendation: Update your system to the latest patched version
+recommendation: "Update your system to the latest patched version"
 patch_status: Fully patched
 #workaround: n/a
 status : Open
